<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_e_voucher_rate"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/mobile_app_special_voucher"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_rate" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_next"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nextred" />

    <LinearLayout
        android:id="@+id/ll_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <LinearLayout
            android:id="@+id/ll_f_and_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/ll_facilities"
            app:layout_constraintTop_toBottomOf="@id/slider">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/fnb" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/inclusive_of_breakfast"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_discount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/ll_facilities"
            app:layout_constraintTop_toBottomOf="@id/slider">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/discount" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/_20_off_in_room_service"
                android:textAlignment="center" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_view_rates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="0dp"
            app:cardElevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_room"
            app:strokeColor="@color/orange"
            app:strokeWidth="1dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/view_rates"
                android:textColor="@color/orange" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_details" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/avg_nightly_room_from"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/_161_42"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_start_end"
        android:layout_marginEnd="5dp"
        android:text="@string/sgd"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tv_price"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/subject_to_gst_amp_service_charge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_price" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_deals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="0dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subject"
        app:strokeWidth="0dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/member_deals"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>