<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_chat"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chatactive" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_currency"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/iv_chat"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/currency" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/margin_start_end"
        android:text="@string/furama_riverfront_n_singapore"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_next"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_chat"
        app:srcCompat="@drawable/nextred" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/margin_start_end"
        android:text="@string/_405_havelock_road_singapore_169633"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_location"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_next"
        app:srcCompat="@drawable/currentlocation" />

    <com.glide.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/margin_start_end"
        app:indicator_visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_address" />

    <LinearLayout
        android:id="@+id/ll_amenities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/theme" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/amenities" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_facilities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/ll_amenities"
        app:layout_constraintTop_toBottomOf="@id/slider">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/workout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/facilities" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_f_and_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/ll_facilities"
        app:layout_constraintTop_toBottomOf="@id/slider">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/fnb" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/f_amp_b" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_kids_family"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/ll_f_and_b"
        app:layout_constraintTop_toBottomOf="@id/slider">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/kidsfamily" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="Kids/family" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_wellness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ll_kids_family"
        app:layout_constraintTop_toBottomOf="@id/slider">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/wellness" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/wellness" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_types"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_amenities">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_by_room"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/light_blue"
            app:cardCornerRadius="0dp"
            app:cardElevation="1dp"
            app:strokeColor="@color/light_blue"
            app:strokeWidth="1dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/by_room"
                android:textColor="@color/black" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_by_rates"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="1dp"
            app:strokeColor="@color/light_blue"
            app:strokeWidth="1dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/by_rates"
                android:textColor="@color/black" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_by_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_types"
        tools:listitem="@layout/item_room" />

</androidx.constraintlayout.widget.ConstraintLayout>